--- a/BlueCometPress/BlueCometPress.html
+++ b/BlueCometPress/BlueCometPress.html
@@ -48,6 +48,7 @@ Titles
 <li><a href="BCP3.jpg">Bladesmen Undersea</a> (1994)
 <li><a href="BCP4.jpg">Crime-Smasher Special Edition</a> (1987)
 <li><a href="BCP5.jpg">Deathrow</a> (1993)
+<li><a href="BCP14.jpg">Devil's Workshop</a> (1995)
 <li><a href="../LifeBrigade/LifeBrigade.html">Life Brigade</a>  (1986)
 <li><a href="BCP6.jpg">Outlaw Overdrive</a> (1995)
 <li><a href="BCP7.jpg">Rollercoasters Special Edition</a> (1987)
@@ -56,7 +57,6 @@ Titles
 <li><a href="BCP11.jpg">Rough Raiders Yearbook</a>  (1994)
 <li><a href="BCP12.jpg">Varmints</a> (1987)
 <li><a href="BCP13.jpg">Varmints Special</a> (1990)
-<li><a href="BCP14.jpg">Workshop</a> (1995)
 <li><a href="BCP15.jpg">Zorann: Star Warrior</a> (1989)
 
 </p>
