--- a/Comico/Comico.html
+++ b/Comico/Comico.html
@@ -30,6 +30,35 @@
 <div class="mySlides" style="text-align: center;"><img src="Comico10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Comico11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Comico12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Comico41.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -53,19 +82,35 @@ Titles
 <li><a href="Comico10.jpg">Jezebel Jade</a> (1988)
 <li><a href="Comico11.jpg">Jonny Quest</a> (1986)
 <li><a href="Comico12.jpg">Justice Machine</a> (1987)
-<li>Mage: The Hero Discovered
-<li>Max Headroom
-<li>Maze Agency
-<li>Next Man
-<li>Robotech
-<li>Rocketeer
-<li>Sam &amp; Max
-<li>Silverback
-<li>Space Ghost
-<li>Star Blazers
-<li>Trollords
-<li>Trouble with Girls
-<li>World of Ginger Fox
+<li><a href="Comico13.jpg">Kingdom of Dwarfs</a> (1991)
+<li><a href="Comico14.jpg">Macross</a> (1984)
+<li><a href="Comico15.jpg">Mage: The Hero Discovered</a> (1984)
+<li><a href="Comico16.jpg">Magebook</a> (1985)
+<li><a href="Comico17.jpg">Max Headroom</a> (1986)
+<li><a href="Comico18.jpg">Maze Agency</a> (1988)
+<li><a href="Comico19.jpg">Monolith</a> (1991)
+<li><a href="Comico20.jpg">Morningstar</a> (1990)
+<li><a href="Comico21.jpg">Next Man</a> (1985)
+<li><a href="Comico22.jpg">Night and the Enemy</a> (1988)
+<li><a href="Comico23.jpg">Oblivion</a> (1995)
+<li><a href="Comico24.jpg">Primer</a> (1982)
+<li><a href="Comico25.jpg">Red Dragon</a> (1996)
+<li><a href="Comico26.jpg">Ribit!</a> (1989)
+<li><a href="Comico27.jpg">Rio</a> (1987)
+<li><a href="Comico28.jpg">Robotech</a> (1985)
+<li><a href="Comico29.jpg">Rocketeer</a> (1988)
+<li><a href="Comico30.jpg">Sam &amp; Max</a> (1989)
+<li><a href="Comico31.jpg">Silverback</a> (1989)
+<li><a href="Comico32.jpg">Skrog</a> (1983)
+<li><a href="Comico33.jpg">Slaughterman</a> (1983)
+<li><a href="Comico34.jpg">Space Ghost</a> (1987)
+<li><a href="Comico35.jpg">Star Blazers</a> (1987)
+<li><a href="Comico36.jpg">Strike Force America</a> (1992)
+<li><a href="Comico37.jpg">Strike Force Legacy</a> (1993)
+<li><a href="Comico38.jpg">Trollords</a> (1988)
+<li><a href="Comico39.jpg">Trouble with Girls</a> (1989)
+<li><a href="Comico40.jpg">Vortex</a> (1991)
+<li><a href="Comico41.jpg">World of Ginger Fox</a> (1986)
 </p>
 
 </body>
