--- a/index.html
+++ b/index.html
@@ -2536,6 +2536,13 @@
 
 <tr>
 <td>Amazon</td>
+<td>1989</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Amazon</td>
 <td>2010</td>
 <td>Dark Horse</td>
 <td><a href="Amazon/Amazon.html">Details</a></td>
@@ -5086,6 +5093,20 @@
 <td>1982</td>
 <td>WB</td>
 <td><a href="BladeRunner/BladeRunner.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bladesmen</td>
+<td>1990</td>
+<td>Blue Comet</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bladesmen Undersea</td>
+<td>1994</td>
+<td>Blue Comet</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7990,6 +8011,13 @@
 </tr>
 
 <tr>
+<td>Crime-Smasher</td>
+<td>1987</td>
+<td>Blue Comet</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crime SuspenStories</td>
 <td>1950</td>
 <td>EC</td>
@@ -9111,6 +9139,13 @@
 </tr>
 
 <tr>
+<td>Deathrow</td>
+<td>1993</td>
+<td>Blue Comet</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Deathstroke</td>
 <td>1991</td>
 <td>DC</td>
@@ -9311,6 +9346,13 @@
 <td>2003</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Devil's Workshop</td>
+<td>1995</td>
+<td>Blue Comet</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10119,6 +10161,13 @@
 </tr>
 
 <tr>
+<td>E-Man</td>
+<td>1989</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Earl Norem</td>
 <td>1923</td>
 <td>Creator</td>
@@ -10441,6 +10490,13 @@
 </tr>
 
 <tr>
+<td>Elementals</td>
+<td>1984</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Elflord Chronicles</td>
 <td>1991</td>
 <td>Aircel</td>
@@ -10725,6 +10781,13 @@
 <td>1974</td>
 <td>Creator</td>
 <td><a href="EthanVanSciver/EthanVanSciver.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Evangeline</td>
+<td>1984</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11439,6 +11502,13 @@
 <td>1985</td>
 <td>Fishwrap</td>
 <td><a href="FishPolice/FishPolice.html">Details</a></td>
+
+<tr>
+<td>Fish Police</td>
+<td>1988</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Fish Tales Publishing</td>
@@ -12982,7 +13052,7 @@
 
 <tr>
 <td>Grendel</td>
-<td>1986</td>
+<td>1983</td>
 <td>Comico</td>
 <td><a href="Grendel/Grendel.html">Details</a></td>
 </tr>
@@ -13118,6 +13188,13 @@
 <td>1726</td>
 <td>Jonathan Swift</td>
 <td><a href="GulliversTravels/GulliversTravels.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gumby</td>
+<td>1989</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14997,6 +15074,13 @@
 </tr>
 
 <tr>
+<td>Jam</td>
+<td>1988</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>James Bond</td>
 <td>1953</td>
 <td>MGM</td>
@@ -15155,6 +15239,13 @@
 <td>2011</td>
 <td>Publisher</td>
 <td><a href="47North/47North.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jezebel Jade</td>
+<td>1988</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15438,6 +15529,13 @@
 </tr>
 
 <tr>
+<td>Jonny Quest</td>
+<td>1986</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jook Joint</td>
 <td>2018</td>
 <td>Image</td>
@@ -15610,6 +15708,13 @@
 <td>1960</td>
 <td>DC</td>
 <td><a href="JusticeLeagueOfAmerica/JusticeLeagueOfAmerica.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Justice Machine</td>
+<td>1987</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15925,6 +16030,13 @@
 <td>2002</td>
 <td>Vertigo</td>
 <td><a href="KingDavid/KingDavid.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kingdom of Dwarfs</td>
+<td>1991</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17194,6 +17306,13 @@
 </tr>
 
 <tr>
+<td>Macross</td>
+<td>1984</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mad</td>
 <td>1952</td>
 <td>EC</td>
@@ -17275,6 +17394,20 @@
 <td>1943</td>
 <td>Publisher</td>
 <td><a href="MagazineEnterprises/MagazineEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mage: The Hero Discovered</td>
+<td>1984</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Magebook</td>
+<td>1985</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18294,6 +18427,13 @@
 
 <tr>
 <td>Maze Agency</td>
+<td>1988</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Maze Agency</td>
 <td>1989</td>
 <td>Innovation</td>
 <td><a href="Innovation/Innovation.html">Details</a></td>
@@ -18915,6 +19055,13 @@
 </tr>
 
 <tr>
+<td>Monolith</td>
+<td>1991</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Monster</td>
 <td>1953</td>
 <td>Fiction House</td>
@@ -19080,6 +19227,13 @@
 <td>2010</td>
 <td>Image</td>
 <td><a href="MorningGlories/MorningGlories.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Morningstar</td>
+<td>1990</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19916,6 +20070,13 @@
 </tr>
 
 <tr>
+<td>Next Man</td>
+<td>1985</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nextwave: Agents of H.A.T.E.</td>
 <td>2006</td>
 <td>Marvel</td>
@@ -19962,6 +20123,13 @@
 <td>2008</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Night and the Enemy</td>
+<td>1988</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20287,7 +20455,14 @@
 </tr>
 
 <tr>
-<td><a name="o">Occultist</a></td>
+<td><a name="o">Oblivion</a></td>
+<td>1995</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Occultist</td>
 <td>2010</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
@@ -20655,6 +20830,13 @@
 <td>2000</td>
 <td>Vertigo</td>
 <td><a href="OutlawNation/OutlawNation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Outlaw Overdrive</td>
+<td>1995</td>
+<td>Blue Comet</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21656,6 +21838,13 @@
 </tr>
 
 <tr>
+<td>Primer</td>
+<td>1982</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Primus</td>
 <td>1972</td>
 <td>Charlton</td>
@@ -22133,6 +22322,13 @@
 </tr>
 
 <tr>
+<td>Red Dragon</td>
+<td>1996</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Red Dwarf</td>
 <td>1988</td>
 <td>BBC</td>
@@ -22384,6 +22580,13 @@
 </tr>
 
 <tr>
+<td>Ribit!</td>
+<td>1989</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Richard Corben</td>
 <td>1970</td>
 <td>Creator</td>
@@ -22465,6 +22668,13 @@
 <td>1954</td>
 <td>Atlas</td>
 <td><a href="RingoKid/RingoKid.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rio</td>
+<td>1987</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22580,6 +22790,13 @@
 </tr>
 
 <tr>
+<td>Robotech</td>
+<td>1985</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Robotmen of the Lost Planet</td>
 <td>1952</td>
 <td>Avon</td>
@@ -22629,6 +22846,13 @@
 </tr>
 
 <tr>
+<td>Rocketeer</td>
+<td>1988</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rocketeer Adventure Magazine</td>
 <td>1995</td>
 <td>Dark Horse</td>
@@ -22668,6 +22892,13 @@
 <td>1889</td>
 <td>Creator</td>
 <td><a href="RolfArmstrong/RolfArmstrong.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rollercoasters</td>
+<td>1987</td>
+<td>Blue Comet</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22772,6 +23003,13 @@
 <td>1969</td>
 <td>Creator</td>
 <td><a href="RoryHayes/RoryHayes.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rough Raiders</td>
+<td>1988</td>
+<td>Blue Comet</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22989,6 +23227,13 @@
 <td>1905</td>
 <td>James Swinerton</td>
 <td><a href="SamAndHisLaugh/SamAndHisLaugh.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sam and Max</td>
+<td>1989</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23971,6 +24216,13 @@
 </tr>
 
 <tr>
+<td>Silverback</td>
+<td>1989</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Silverfish</td>
 <td>2014</td>
 <td>Vertigo</td>
@@ -24090,6 +24342,13 @@
 </tr>
 
 <tr>
+<td>Skrog</td>
+<td>1983</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Skrull Kill Krew</td>
 <td>1995</td>
 <td>Marvel</td>
@@ -24122,6 +24381,13 @@
 <td>1970</td>
 <td>Publisher</td>
 <td><a href="Skywald/Skywald.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Slaughterman</td>
+<td>1989</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24360,6 +24626,13 @@
 <td>1951</td>
 <td>Avon</td>
 <td><a href="SpaceDetective/SpaceDetective.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Space Ghost</td>
+<td>1987</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24773,6 +25046,13 @@
 <td>1951</td>
 <td>Publisher</td>
 <td><a href="StanleyMorse/StanleyMorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Star Blazers</td>
+<td>1987</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25208,6 +25488,20 @@
 <td>1986</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strike Force America</td>
+<td>1992</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strike Force Legacy</td>
+<td>1993</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26407,10 +26701,24 @@
 </tr>
 
 <tr>
+<td>Trollords</td>
+<td>1988</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Trouble</td>
 <td>2003</td>
 <td>Marvel</td>
 <td><a href="Trouble/Trouble.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Troble With Girls</td>
+<td>1989</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26981,6 +27289,13 @@
 </tr>
 
 <tr>
+<td>Varmints</td>
+<td>1993</td>
+<td>Blue Comet</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Vaughn Bode</td>
 <td>1941</td>
 <td>Creator</td>
@@ -27161,6 +27476,13 @@
 <td>1952</td>
 <td>Farrell</td>
 <td><a href="Voodoo/Voodoo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vortex</td>
+<td>1991</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28172,6 +28494,13 @@
 </tr>
 
 <tr>
+<td>World of Ginger Fox</td>
+<td>1986</td>
+<td>Comico</td>
+<td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
 <td>World of H.P. Lovecraft</td>
 <td>1993</td>
 <td>Caliber</td>
@@ -28687,6 +29016,13 @@
 <td>1946</td>
 <td>Fox</td>
 <td><a href="Zoot/Zoot.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zorann: Star Warrior</td>
+<td>1989</td>
+<td>Blue Comet</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
 </tr>
 
 <tr>
