--- a/index.html
+++ b/index.html
@@ -5844,6 +5844,13 @@
 </tr>
 
 <tr>
+<td>Bulls Eye Comics</td>
+<td>1944</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bullseye</td>
 <td>1955</td>
 <td>Charlton</td>
@@ -6159,6 +6166,13 @@
 </tr>
 
 <tr>
+<td>Captain Battle Comics</td>
+<td>1942</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Britain</td>
 <td>1976</td>
 <td>Marvel</td>
@@ -6373,6 +6387,13 @@
 <td>2018</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Carnival Comics</td>
+<td>1945</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7182,6 +7203,13 @@
 <td>1975</td>
 <td>Last Gasp</td>
 <td><a href="CocaineComix/CocaineComix.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cocomalt Book of Comics</td>
+<td>1938</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13947,6 +13975,13 @@
 </tr>
 
 <tr>
+<td>Hi Yi</td>
+<td>1945</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hi-Fructose</td>
 <td>2005</td>
 <td>Hi-Fructose</td>
@@ -15228,6 +15263,13 @@
 </tr>
 
 <tr>
+<td>Jest Comics</td>
+<td>1944</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jet Aces</td>
 <td>1952</td>
 <td>Fiction House</td>
@@ -15809,6 +15851,13 @@
 </tr>
 
 <tr>
+<td>Kayo Komics</td>
+<td>1945</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Keenspot Entertainment</td>
 <td>2000</td>
 <td>Publisher</td>
@@ -16233,6 +16282,13 @@
 <td>1974</td>
 <td>ABC</td>
 <td><a href="KolchakTheNightStalker/KolchakTheNightStalker.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Komik Pages</td>
+<td>1945</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16686,7 +16742,7 @@
 <tr>
 <td>Life Brigade</td>
 <td>1986</td>
-<td>Blue Comet Press</td>
+<td>Blue Comet</td>
 <td><a href="LifeBrigade/LifeBrigade.html">Details</a></td>
 </tr>
 
@@ -17464,6 +17520,13 @@
 <td>1998</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Major Victory Comics</td>
+<td>1944</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22370,6 +22433,13 @@
 </tr>
 
 <tr>
+<td>Red Seal Comics</td>
+<td>1945</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Red Sonja</td>
 <td>1973</td>
 <td>Marvel</td>
@@ -23474,6 +23544,13 @@
 </tr>
 
 <tr>
+<td>Scoop Comics</td>
+<td>1941</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Scorpion</td>
 <td>1975</td>
 <td>Atlas Seaboard</td>
@@ -24377,6 +24454,13 @@
 </tr>
 
 <tr>
+<td>Skyrocket Comics</td>
+<td>1944</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Skywald</td>
 <td>1970</td>
 <td>Publisher</td>
@@ -24479,6 +24563,13 @@
 <td>1990</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Snap Comics</td>
+<td>1944</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24832,6 +24923,13 @@
 </tr>
 
 <tr>
+<td>Spotlight Comics</td>
+<td>1944</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Spotty the Pup</td>
 <td>1953</td>
 <td>Avon</td>
@@ -25056,10 +25154,24 @@
 </tr>
 
 <tr>
+<td>Star Comics</td>
+<td>1937</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Star Control</td>
 <td>1990</td>
 <td>Accolade</td>
 <td><a href="StarControl/StarControl.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Star Ranger</td>
+<td>1937</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28729,6 +28841,13 @@
 <td>1973</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Yankee Comics</td>
+<td>1941</td>
+<td>Chesler
+<td><a href="Chesler/Chesler.html">Details</a></td>
 </tr>
 
 <tr>
