--- a/index.html
+++ b/index.html
@@ -513,6 +513,13 @@
 </tr>
 
 <tr>
+<td>2012</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>2020 Visions</td>
 <td>1997</td>
 <td>Vertigo</td>
@@ -912,6 +919,13 @@
 <td>1969</td>
 <td>Publisher</td>
 <td><a href="ACComics/ACComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Academic Hour</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3850,6 +3864,13 @@
 </tr>
 
 <tr>
+<td>Backstage of a Dishwashing Webshow</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bacter-Area</td>
 <td>2005</td>
 <td>Drawn &amp; Quarterly</td>
@@ -3931,6 +3952,13 @@
 <td>2017</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bald Knobber</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6137,6 +6165,13 @@
 </tr>
 
 <tr>
+<td>Capacity</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Capcom</td>
 <td>1981</td>
 <td>Publisher</td>
@@ -8269,6 +8304,13 @@
 </tr>
 
 <tr>
+<td>Curio Cabinet</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Curse of Dracula</td>
 <td>1998</td>
 <td>Dark Horse</td>
@@ -10303,7 +10345,14 @@
 <td>Eclipse Magazine</td>
 <td>1981</td>
 <td>Eclipse</td>
-<td><a href="../EclipseMagazine/EclipseMagazine.html">Details</a></td>
+<td><a href="EclipseMagazine/EclipseMagazine.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eclipse Monthly</td>
+<td>1983</td>
+<td>Eclipse</td>
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10510,6 +10559,13 @@
 </tr>
 
 <tr>
+<td>El Salvador: A House Divided</td>
+<td>1989</td>
+<td>Eclipse</td>
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>El Zombo Fantasma</td>
 <td>2004</td>
 <td>Dark Horse</td>
@@ -10556,6 +10612,13 @@
 <td>1984</td>
 <td>Comico</td>
 <td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elf-Thing</td>
+<td>1987</td>
+<td>Eclipse</td>
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10685,6 +10748,13 @@
 </tr>
 
 <tr>
+<td>Entropy</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Envelope Manufacturer</td>
 <td>1998</td>
 <td>Drawn &amp; Quarterly</td>
@@ -10794,6 +10864,13 @@
 <td>2006</td>
 <td>Dark Horse</td>
 <td><a href="Escapists/Escapists.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eschew</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11280,6 +11357,13 @@
 </tr>
 
 <tr>
+<td>Fatal Fauz-Pas</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fatale</td>
 <td>2012</td>
 <td>Image</td>
@@ -11699,6 +11783,13 @@
 </tr>
 
 <tr>
+<td>Flocks</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Flowers: A Rebirth</td>
 <td>1995</td>
 <td>Drawn &amp; Quarterly</td>
@@ -11850,6 +11941,13 @@
 <td>1983</td>
 <td>Jim Henson</td>
 <td><a href="FraggleRock/FraggleRock.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Francine</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12427,6 +12525,13 @@
 </tr>
 
 <tr>
+<td>Gaylord Phoenix</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gekiga!</td>
 <td>2008</td>
 <td>Drawn &amp; Quarterly</td>
@@ -12585,6 +12690,13 @@
 <td>1954</td>
 <td>Mikeross</td>
 <td><a href="GetLost/GetLost.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Get Over It!</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14422,6 +14534,13 @@
 </tr>
 
 <tr>
+<td>I will Bit You!</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>I, Paparazzi</td>
 <td>2002</td>
 <td>Vertigo</td>
@@ -14930,6 +15049,13 @@
 <td>2016</td>
 <td>Abrams</td>
 <td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Iron Bound</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16116,6 +16242,13 @@
 </tr>
 
 <tr>
+<td>Kingdom / Order</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kingdom of Dwarfs</td>
 <td>1991</td>
 <td>Comico</td>
@@ -16955,6 +17088,13 @@
 </tr>
 
 <tr>
+<td>Little Stranger</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Livewire</td>
 <td>2018</td>
 <td>Valiant</td>
@@ -17708,6 +17848,13 @@
 <td>1971</td>
 <td>Creator</td>
 <td><a href="MarcBell/MarcBell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marchenoir Library</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18649,6 +18796,13 @@
 </tr>
 
 <tr>
+<td>Memory Palaces</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Men in Action</td>
 <td>1952</td>
 <td>Marvel</td>
@@ -19201,6 +19355,13 @@
 </tr>
 
 <tr>
+<td>Monsters</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Monsters Attack</td>
 <td>1989</td>
 <td>Globe</td>
@@ -19352,6 +19513,13 @@
 <td>1992</td>
 <td>Midway</td>
 <td><a href="MortalKombat/MortalKombat.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Motel Universe</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20727,6 +20895,13 @@
 </tr>
 
 <tr>
+<td>Only Skin</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Onslaught Reborn</td>
 <td>2007</td>
 <td>Marvel</td>
@@ -20815,6 +20990,13 @@
 <td>2002</td>
 <td>Marvel</td>
 <td><a href="Order/Order.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Order of Things</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21039,6 +21221,13 @@
 <td>1996</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Palefire</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21277,6 +21466,13 @@
 <td>2005</td>
 <td>Dark Horse</td>
 <td><a href="Perhapanauts/Perhapanauts.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Persephone's Garden</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22047,6 +22243,13 @@
 </tr>
 
 <tr>
+<td>PS Comics</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>PS Magazine: The Best of Preventive Maintenance Monthly</td>
 <td>2011</td>
 <td>Abrams</td>
@@ -22094,6 +22297,13 @@
 <td>1997</td>
 <td>Marvel</td>
 <td><a href="PsylockeArchangel/PsylockeArchangel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pterodactyl Hunters in the Gilded City</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22402,6 +22612,13 @@
 <td>1987</td>
 <td>Publisher</td>
 <td><a href="RebelStudios/RebelStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Recidivist IV</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23180,6 +23397,13 @@
 </tr>
 
 <tr>
+<td>Rust Belt</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rusty</td>
 <td>1946</td>
 <td>Marvel</td>
@@ -23718,6 +23942,13 @@
 </tr>
 
 <tr>
+<td>Secret Acres</td>
+<td>2006</td>
+<td>Publisher</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Secret Agent</td>
 <td>1967</td>
 <td>Charlton</td>
@@ -23925,6 +24156,13 @@
 <td>1996</td>
 <td>Marvel</td>
 <td><a href="SergioAragonesMassacresMarvel/SergioAragonesMassacresMarvel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sequential Vacation</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24254,6 +24492,13 @@
 <td>1949</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sick</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24684,6 +24929,13 @@
 </tr>
 
 <tr>
+<td>Songs of the Abyss</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Songy of Paradise</td>
 <td>2017</td>
 <td>Fantagraphics</td>
@@ -24716,6 +24968,13 @@
 <td>1987</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Space - An Eschew Collection</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27085,6 +27344,13 @@
 </tr>
 
 <tr>
+<td>Understanding Monster</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Underwater</td>
 <td>1994</td>
 <td>Drawn &amp; Quaterly</td>
@@ -27961,10 +28227,24 @@
 </tr>
 
 <tr>
+<td>Washington White</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Watchmen</td>
 <td>1986</td>
 <td>DC</td>
 <td><a href="Watchmen/watchmen.html">Details</a><br></td>
+</tr>
+
+<tr>
+<td>Wayward Girls</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27993,6 +28273,13 @@
 <td>1999</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Weather</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28700,6 +28987,13 @@
 <td>1973</td>
 <td>Marvel</td>
 <td><a href="JourneyIntoUnknownWorlds/JourneyIntoUnknownWorlds.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wormdye</td>
+<td>2008</td>
+<td>Secret Acres</td>
+<td><a href="SecretAcres/SecretAcres.html">Details</a></td>
 </tr>
 
 <tr>
