--- a/index.html
+++ b/index.html
@@ -894,6 +894,13 @@
 </tr>
 
 <tr>
+<td>About Comics</td>
+<td>1999</td>
+<td>Publisher</td>
+<td><a href="AboutComics/AboutComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abraham Stone</td>
 <td>1995</td>
 <td>Epic</td>
